# kde-tts-inputmethod

./: .gitmodules  CMakeLists.txt  audiosource  audiosource.cpp  audiosource.h  main.cpp  processor.cpp  processor.h  test.cpp
audiosource_autogen/: moc_predefs.h  mocs_compilation.cpp
audiosource_autogen/EWIEGA46WW/: moc_audiosource.cpp  moc_audiosource.cpp.d
audiosource_autogen/include/: audiosource.moc  audiosource.moc.d
